deployment/base/000-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  labels:
    app: publish
  name: bomc-rename-namespace
