deployment/base/030-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: publish
  name: publisher
  namespace: bomc-publish-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: publish
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        prometheus.io/path: actuator/prometheus
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8181'
      labels:
        app: publish
    spec:
      serviceAccountName: publisher-account
      containers:
      - name: publish
        image: localhost:5000/bomc/publish:v.1.0.0-68-ga508b98
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 10m
            memory: 360Mi
          limits:
            cpu: 50m
            memory: 360Mi
        ports:
        - containerPort: 8181
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8181
          initialDelaySeconds: 25
          periodSeconds: 30
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8181
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
