deployment/base/040-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: publish
  name: publish-service
  namespace: OVERRIDE_BY_OVERLAYS
spec:
  selector:
    app: publish
  ports:
  - protocol: TCP
    name: 8181-tcp
    port: 8181
    targetPort: 8181
