deployment/base/045-svc-nodeport-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: publish-service-nodeport-ingress
  namespace: default
  labels:
    app: publish
spec:
  selector:
    app: publish
  ports:
  - protocol: TCP
    name: OVERRIDE_BY_OVERLAYS
    port: OVERRIDE_BY_OVERLAYS
    targetPort: OVERRIDE_BY_OVERLAYS
  type: NodePort
